--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
-    "@react-navigation/bottom-tabs": "^7.4.7",
-    "@react-navigation/native": "^7.1.17",
+    "@react-native-vector-icons/ionicons": "12.3.0",
+    "@react-navigation/bottom-tabs": "^7.4.8",
+    "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.4.8",
-    "expo": "~53.0.22",
-    "expo-asset": "^12.0.8",
-    "expo-font": "^14.0.8",
+    "expo": "^53.0.22",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
