--- a/app.json
+++ b/app.json
@@ -24,6 +24,14 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "plugins": [
+      "expo-asset"
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "b6bfff04-4a95-4fc5-a8ff-586ac67501b5"
+      }
     }
   }
 }
