--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-app",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
@@ -9,19 +10,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-vector-icons/ionicons": "12.3.0",
-    "@react-navigation/bottom-tabs": "^7.4.8",
-    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/bottom-tabs": "^7.7.3",
+    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/native-stack": "^7.6.2",
     "@react-navigation/stack": "^7.4.8",
-    "expo": "^53.0.22",
+    "expo": "~53.0.23",
+    "expo-asset": "~11.1.7",
+    "expo-auth-session": "~6.2.1",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
-    "react-native": "0.79.5",
+    "react-native": "0.79.6",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-modalize": "^2.1.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
