--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~54.0.0",
     "expo-asset": "~12.0.9",
     "expo-auth-session": "~7.0.8",
+    "expo-av": "^16.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.9",
     "react": "^19.1.0",
