--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@react-navigation/stack": "^7.4.8",
     "expo": "~54.0.0",
     "expo-asset": "~12.0.9",
+    "expo-audio": "~1.0.14",
     "expo-auth-session": "~7.0.8",
     "expo-av": "^16.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-video": "~3.0.14",
     "expo-web-browser": "~15.0.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
